--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -2,19 +2,19 @@
   alias: Main bedroom - Kid indicator
   trigger:
     - platform: state
-      entity_id: group.lucas_bedroom_lights
+      entity_id: light.lucas_bedroom_light
     - platform: state
-      entity_id: group.xander_bedroom_lights
+      entity_id: light.xander_bedroom_light
   condition: []
   action:
     service: light.turn_on
     data_template:
       entity_id: light.bedroom_led
-      brightness_pct: "{% if is_state('group.lucas_bedroom_lights', 'off') and is_state('group.xander_bedroom_lights', 'off') %}0{% else %}100{% endif %}"
+      brightness_pct: "{% if is_state('light.lucas_bedroom_light', 'off') and is_state('light.xander_bedroom_light', 'off') %}0{% else %}100{% endif %}"
       color_name: >
-        {% if is_state('group.lucas_bedroom_lights', 'on') and is_state('group.xander_bedroom_lights', 'on') %} red
-        {% elif is_state('group.lucas_bedroom_lights', 'off') and is_state('group.xander_bedroom_lights', 'on') %} green
-        {% elif is_state('group.lucas_bedroom_lights', 'on') and is_state('group.xander_bedroom_lights', 'off') %} blue
+        {% if is_state('light.lucas_bedroom_light', 'on') and is_state('light.xander_bedroom_light', 'on') %} red
+        {% elif is_state('light.lucas_bedroom_light', 'off') and is_state('light.xander_bedroom_light', 'on') %} green
+        {% elif is_state('light.lucas_bedroom_light', 'on') and is_state('light.xander_bedroom_light', 'off') %} blue
         {% else %} white
         {% endif %}
 - id: main_bedroom_night_mode
@@ -24,12 +24,12 @@
     at: '20:30:00'
   condition:
     condition: state
-    entity_id: group.bedroom_lights
+    entity_id: light.bedroom_light_group
     state: 'off'
   action:
     service: light.turn_on
     data:
-      entity_id: group.bedroom_lights
+      entity_id: light.bedroom_light_group
       brightness_pct: 50
       transition: 300
 - alias: Dimmer - Main Bedroom
@@ -38,15 +38,16 @@
     platform: state
   condition: []
   action:
-  - entity_id: group.bedroom_lights
+  - entity_id: light.bedroom_light_group
     service_template: >
         {% if trigger.to_state.state|length %}light.turn_on
         {% else %}script.noop
         {% endif %}
     data_template:
+      transition: 2
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
         {% elif trigger.to_state.state == 'up-press' %} 50
-        {% elif trigger.to_state.state == 'down-press' %} 1
+        {% elif trigger.to_state.state == 'down-press' %} 10
         {% elif trigger.to_state.state == 'off-press' %} 0
         {% endif %}
