--- a/automation/craftarea.yaml
+++ b/automation/craftarea.yaml
@@ -4,7 +4,7 @@
     platform: state
   condition: []
   action:
-  - entity_id: group.craftarea_lights
+  - entity_id: light.craftroom_light
     service_template: >
         {% if trigger.to_state.state|length %}light.turn_on
         {% else %}script.noop
@@ -15,5 +15,18 @@
         {% elif trigger.to_state.state == 'up-press' %} 50
         {% elif trigger.to_state.state == 'down-press' %} 1
         {% elif trigger.to_state.state == 'off-press' %} 0
+        {% else %}0
         {% endif %}
-
+  - entity_id: light.backroom_light_group
+    service_template: >
+        {% if trigger.to_state.state|length %}light.turn_on
+        {% else %}script.noop
+        {% endif %}
+    data_template:
+      brightness_pct: >
+        {% if trigger.to_state.state == 'on-press' %} 100
+        {% elif trigger.to_state.state == 'up-press' %} 50
+        {% elif trigger.to_state.state == 'down-press' %} 1
+        {% elif trigger.to_state.state == 'off-press' %} 0
+        {% else %}0
+        {% endif %}
