--- a/automation/kitchen.yaml
+++ b/automation/kitchen.yaml
@@ -4,7 +4,7 @@
     platform: state
   condition: []
   action:
-  - entity_id: group.kitchen_lights
+  - entity_id: light.kitchen_light_group
     service_template: >
         {% if trigger.to_state.state|length %}light.turn_on
         {% else %}script.noop
@@ -13,7 +13,10 @@
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
         {% elif trigger.to_state.state == 'up-press' %} 50
-        {% elif trigger.to_state.state == 'down-press' %} 1
+        {% elif trigger.to_state.state == 'down-press' %} 50
         {% elif trigger.to_state.state == 'off-press' %} 0
         {% endif %}
-
+      color_name: >
+        {% if trigger.to_state.state == 'down-press' %} blue
+        {% else %} white
+        {% endif %}
