--- a/automation/xander.yaml
+++ b/automation/xander.yaml
@@ -4,7 +4,7 @@
     platform: state
   condition: []
   action:
-  - entity_id: group.xander_bedroom_lights
+  - entity_id: light.xander_bedroom_light
     service_template: >
         {% if trigger.to_state.state|length %}light.turn_on
         {% else %}script.noop
