--- a/automation/backroom.yaml
+++ b/automation/backroom.yaml
@@ -2,13 +2,12 @@
   trigger:
   - entity_id: sensor.backroom_dimmer_action
     platform: state
-  condition: []
+  condition:
+    - condition: template
+      value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.backroom_light_group
-    service_template: >
-        {% if trigger.to_state.state|length %}light.turn_on
-        {% else %}script.noop
-        {% endif %}
+    service_template: light.turn_on
     data_template:
       transition: 2
       brightness_pct: >
