--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -36,13 +36,12 @@
   trigger:
   - entity_id: sensor.main_bedroom_dimmer_action
     platform: state
-  condition: []
+  condition:
+    - condition: template
+      value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.bedroom_light_group
-    service_template: >
-        {% if trigger.to_state.state|length %}light.turn_on
-        {% else %}script.noop
-        {% endif %}
+    service_template: light.turn_on
     data_template:
       transition: 2
       brightness_pct: >
