--- a/automation/hall.yaml
+++ b/automation/hall.yaml
@@ -2,13 +2,12 @@
   trigger:
   - entity_id: sensor.hall_dimmer_action
     platform: state
-  condition: []
+  condition:
+    - condition: template
+      value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
     - entity_id: light.hall_white
-      service_template: >
-        {% if trigger.to_state.state|length %}light.turn_on
-        {% else %}script.noop
-        {% endif %}
+      service_template: light.turn_on
       data_template:
         transition: 0
         brightness_pct: >
@@ -17,14 +16,12 @@
           {% else %}0
           {% endif %}
     - entity_id: light.hall_colour
-      service_template: >
-        {% if trigger.to_state.state|length %}light.turn_on
-        {% else %}script.noop
-        {% endif %}
+      service_template: light.turn_on
       data_template:
         transition: 0
+        color_name: blue
         brightness_pct: >
-          {% if trigger.to_state.state == 'down-press' %}100
+          {% if trigger.to_state.state == 'down-press' %}50
           {% else %}0
           {% endif %}
 # Change the hall light colour based on time and if the kids lights are on
@@ -106,4 +103,3 @@
       data:
         entity_id: light.hall_white
         transition: 0
-      
