--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -43,13 +43,12 @@
   trigger:
   - entity_id: sensor.livingroom_dimmer_action
     platform: state
-  condition: []
+  condition:
+    - condition: template
+      value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
     - entity_id: input_select.livingroom_preset
-      service_template: >
-        {% if trigger.to_state.state|length %}input_select.select_option
-        {% else %}script.noop
-        {% endif %}
+      service_template: input_select.select_option
       data_template:
         option: >
           {% if trigger.to_state.state == "on-press" %}Normal
