--- a/automation/presence.yaml
+++ b/automation/presence.yaml
@@ -10,17 +10,32 @@
     condition: template
     value_template: "{% if not (is_state('person.chris', 'home') or is_state('person.mel', 'home')) %} true {% else %} false {% endif %}"
   action:
-    service: switch.toggle
-    entity_id: switch.camera3_away
-- alias: 'People home'
+    - service: switch.toggle
+      entity_id: switch.camera3_away
+    - service: notify.telegram_notify
+      data:
+        message: "Feeling lonely"
+- alias: 'Mel home'
   trigger:
     - platform: state
       entity_id: person.mel
       to: 'home'
+  condition: []
+  action:
+    - service: switch.toggle
+      entity_id: switch.camera3_home
+    - service: notify.telegram_notify
+      data:
+        message: "Yay - Mel's home"
+- alias: 'People home'
+  trigger:
     - platform: state
       entity_id: person.chris
       to: 'home'
   condition: []
   action:
-    service: switch.toggle
-    entity_id: switch.camera3_home
+    - service: switch.toggle
+      entity_id: switch.camera3_home
+    - service: notify.telegram_notify
+      data:
+        message: "Yay - you're home"
