Rmove template when not used

--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -41,7 +41,7 @@
       value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.bedroom_light_group
-    service_template: light.turn_on
+    service: light.turn_on
     data_template:
       transition: 2
       brightness_pct: >
