--- a/automation/kitchen.yaml
+++ b/automation/kitchen.yaml
@@ -7,7 +7,7 @@
       value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.kitchen_light_group
-    service_template: light.turn_on
+    service: light.turn_on
     data_template:
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
