--- a/automation/craftarea.yaml
+++ b/automation/craftarea.yaml
@@ -7,7 +7,7 @@
       value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.craftroom_light
-    service_template: light.turn_on
+    service: light.turn_on
     data_template:
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
@@ -16,7 +16,7 @@
         {% elif trigger.to_state.state == 'off-press' %} 0
         {% endif %}
   - entity_id: light.backroom_light_group
-    service_template: light.turn_on
+    service: light.turn_on
     data_template:
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
