--- a/automation/craftroom.yaml
+++ b/automation/craftroom.yaml
@@ -7,10 +7,7 @@
       value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
   action:
   - entity_id: light.craftroom_light
-    service_template: >
-        {% if trigger.to_state.state|length %}light.turn_on
-        {% else %}script.noop
-        {% endif %}
+    service: light.turn_on
     data_template:
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
