--- a/scripts.yaml
+++ b/scripts.yaml
@@ -24,55 +24,55 @@ arriving_home:
       data:
         entity_id: input_select.livingroom_preset
         option: "Normal"
-camera3_ptz_up:
-  alias: Camera3 Up
+backroom_ptz_up:
+  alias: backroom_ptz Up
   sequence:
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         tilt: 'UP'
     - delay:
         milliseconds: 250
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         tilt: 'NONE' 
-camera3_ptz_down:
-  alias: Camera3 Down
+backroom_ptz_down:
+  alias: backroom_ptz Down
   sequence:
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         tilt: 'DOWN'
     - delay:
         milliseconds: 250
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         tilt: 'NONE'
-camera3_ptz_left:
-  alias: Camera3 Left
+backroom_ptz_left:
+  alias: backroom_ptz Left
   sequence:
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         pan: 'LEFT'
     - delay:
         milliseconds: 250
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         pan: 'NONE'  
-camera3_ptz_right:
-  alias: Camera3 Right
+backroom_ptz_right:
+  alias: backroom_ptz Right
   sequence:
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         pan: 'RIGHT'
     - delay:
         milliseconds: 250
     - service: camera.onvif_ptz
       data:
-        entity_id: camera.camera3
+        entity_id: camera.backroom_ptz
         pan: 'NONE'  
