--- a/shell_command.yaml
+++ b/shell_command.yaml
@@ -1,2 +1,2 @@
-camera3_away: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080"'
-camera3_home: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
+backroom_ptz_away: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080"'
+backroom_ptz_home: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
