--- a/switches/command_line.yaml
+++ b/switches/command_line.yaml
@@ -1,26 +1,26 @@
 - platform: command_line
   switches:
-    backroom_up:
+    backyard_up:
       value_template: "{{ True }}"
       command_on: '/config/ptz_script.sh 1'
       command_off: '/config/ptz_script.sh 1'
-    backroom_down:
+    backyard_down:
       value_template: "{{ True }}"
       command_on: '/config/ptz_script.sh 2'
       command_off: '/config/ptz_script.sh 2'
-    backroom_right:
+    backyard_right:
       value_template: "{{ True }}"
       command_on: '/config/ptz_script.sh 3'
       command_off: '/config/ptz_script.sh 3'
-    backroom_left:
+    backyard_left:
       value_template: "{{ True }}"
       command_on: '/config/ptz_script.sh 4'
       command_off: '/config/ptz_script.sh 4'
-    camera3_away:
+    backroom_ptz_away:
       value_template: "{{ True }}"
       command_on: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080"'
       command_off: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080"'
-    camera3_home:
+    backroom_ptz_home:
       value_template: "{{ True }}"
       command_on: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
       command_off: 'curl "http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687"'
