--- a/switches/ptz.yaml
+++ b/switches/ptz.yaml
@@ -1,22 +1,22 @@
 - platform: template
   switches:
-    camera3_ptz_up:
+    backroom_ptz_up:
       value_template: "{{ False }}"
       turn_off:
       turn_on:
-        - service: script.camera3_ptz_up
-    camera3_ptz_down:
+        - service: script.backroom_ptz_up
+    backroom_ptz_down:
       value_template: "{{ False }}"
       turn_off:
       turn_on:
-        - service: script.camera3_ptz_down
-    camera3_ptz_left:
+        - service: script.backroom_ptz_down
+    backroom_ptz_left:
       value_template: "{{ False }}"
       turn_off:
       turn_on:
-        - service: script.camera3_ptz_left
-    camera3_ptz_right:
+        - service: script.backroom_ptz_left
+    backroom_ptz_right:
       value_template: "{{ False }}"
       turn_off:
       turn_on:
-        - service: script.camera3_ptz_right
+        - service: script.backroom_ptz_right
