--- a/configuration.yaml
+++ b/configuration.yaml
@@ -111,6 +111,10 @@ hangouts:
   error_suppressed_conversations:
     - id: hangout_id
 
+wemo:
+  static:
+    - 192.168.86.37
+
 input_select: !include input_select.yaml
 sensor: !include sensors.yaml
 custom_updater: !include custom_updater.yaml
@@ -128,5 +132,4 @@ media_player: !include media_player.yaml
 shell_command: !include shell_command.yaml
 light: !include light.yaml
 panel_iframe: !include panel_iframe.yaml
-binary_sensor: !include binary_sensor.yaml
 input_boolean: !include input_boolean.yaml
