Add transitions for lights

--- a/automation/xander.yaml
+++ b/automation/xander.yaml
@@ -9,6 +9,7 @@
   - entity_id: light.xander_bedroom_light
     service: light.turn_on
     data_template:
+      transition: 1
       brightness_pct: >
         {% if trigger.to_state.state == 'on-press' %} 100
         {% elif trigger.to_state.state == 'up-press' %} 50
