Light names changed

--- a/scene.yaml
+++ b/scene.yaml
@@ -84,16 +84,15 @@
   entities:
     group.backroom_lights: false
     group.livingroom_lights: false
-    group.office_lights: false
+    light.office_light: false
     group.bedroom_lights: false
-    group.craftroom_lights: false
-    group.craftarea_lights: false
+    light.craftroom_light: false
     group.kitchen_lights: false
-    group.xander_bedroom_lights: false
-    group.lucas_bedroom_lights: false
+    light.xander_bedroom_light: false
+    light.lucas_bedroom_light: false
     group.hall_lights: false
     group.entry_lights: false
-    group.front_lights: false
+    light.sensor_light: false
     light.tv_backlight_2:
       state: true
       brightness_pct: 100
