Set AC state based on contact sensor located on AC

--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -56,3 +56,12 @@
           {% elif trigger.to_state.state == "down-press" %}Night
           {% elif trigger.to_state.state == "off-press" %}TurnOff
           {% endif %}
+- alias: AC State set
+  trigger:
+    - entity_id: binary_sensor.ac_active_sensor_contact
+      platform: state 
+      to: "off"
+  condition: []
+  action:
+    - entity_id: climate.living_room
+      service: climate.turn_off
